[gd_scene load_steps=4 format=3 uid="uid://cchxoff4xxnj1"]

[ext_resource type="Script" path="res://scripts/ui/inv_screen.gd" id="1_4sirn"]
[ext_resource type="Script" path="res://scripts/ui/poke_panel_controller.gd" id="2_7mcyc"]
[ext_resource type="Texture2D" uid="uid://bjwpri28xm1tw" path="res://images/items/forage/artifact_arrow_head.png" id="3_50j7o"]

[node name="InvScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4sirn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0345492, 0.553047, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2/MarginContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
color = Color(0, 0.862847, 0.764904, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 10

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40
script = ExtResource("2_7mcyc")

[node name="ItemData" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ItemData"]
custom_minimum_size = Vector2(100, 500)
layout_mode = 2
texture = ExtResource("3_50j7o")

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ItemData"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Arrowhead"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Desc" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ItemData"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PokePanelHolder" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
